# Flower-Decentralized-AI-Hackathon

./: PROJECT_SUMMARY.md  README.md  TRACK2_SUMMARY.md  pyproject.toml  save_datasets.ipynb  train_all_datasets.py
hackathon_contributions/: README.md  SUBMISSION_SUMMARY.md  simple_test.py  test_wandb_integration.py  wandb_example.py  wandb_mod.py  wandb_strategy_wrapper.py
medapp/: __init__.py  client_app.py  server_app.py  task.py
medical_ai_service/: Dockerfile  README.md  app.py  docker-compose.yml  requirements.txt
medical_ai_service/templates/: index.html
vertical_federated_medical/: Dockerfile  README.md  contribution_rewards.py  data_harmonization.py  demo.py  docker-compose.yml  requirements.txt  run_vertical_revolution.py  vertical_fl_core.py  vertical_fl_simulation.py
