# =====================================================================
# For a full TOML configuration guide, check the Flower docs:
# https://flower.ai/docs/framework/how-to-configure-pyproject-toml.html
# =====================================================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "medapp"
version = "1.0.0"
description = ""
license = "Apache-2.0"
# Dependencies for your Flower App
dependencies = [
    "flwr[simulation]>=1.22.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "wandb==0.21.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

# Point to your ServerApp and ClientApp objects
[tool.flwr.app.components]
serverapp = "medapp.server_app:app"
clientapp = "medapp.client_app:app"

# Custom config values accessible via `context.run_config`
[tool.flwr.app.config]
num-server-rounds = 10
fraction-train = 0.8
local-epochs = 3
num-classes = 9
dataset = "pathmnist"
lr = 0.001
use-wandb = false
wandb-token = ""

# Default federation to use when running the app
[tool.flwr.federations]
default = "remote-federation"

# Remote federation example for use with SuperLink
[tool.flwr.federations.remote-federation]
address = "hackathon.flower.ai"
enable-user-auth = true
options.num-supernodes = 8
